zeit.addcentral changes
=======================

0.3 (unreleased)
----------------

- Using versions from the ZTK.

- Adapt for test changes in zeit.cms


0.2 (2009-08-21)
----------------

- Subressort wird wieder gefiltert (#6016).

0.1 (2009-08-17)
----------------

- Erstes release.